fix brand discreet consistency on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -216,7 +216,15 @@ h3 {
 }
 @media (max-width: 650px) {
   .branddiscreet {
-    margin-top: 24px;
+    font-size: 32px;
+    margin-top: 8px;
+    margin-bottom: 24px;
+  }
+}
+@media (min-width: 2400px) {
+  .branddiscreet {
+    font-size: 70px;
+    margin-bottom: 48px;
   }
 }
 
